# 변경사항 1. video list 로직 변경 - 설정 파일에서 설정된 media base path 적용되도록 수정